# data-pocs

./: README.md  app.py  application.properties  docker-compose.yaml
cdc/debezium/: README.md  pyproject.toml
cdc/debezium/sql_scripts/: 0_create_table_department_dim.sql  1_create_department_dim_history.sql  4_delete_department_dim.sql
sql_scripts/: 2_populate_department_dim.sql  3_update_department_dim.sql
