[tool.poetry]
authors = ["Alejandro Martinez <alejandroa@kannactnow.com>"]
description = "Debezium cdc on pg to nats to sink ch"
name = "debezium-pg-nats"
packages = [{include = "debezium_pg_nats"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
nats-py = "^2.3.1"
pyscopg2 = "^66.0.2"
psycopg2 = "^2.9.7"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
